name property added again to pass data to form

--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -13,11 +13,11 @@
     <option value="12">12</option>
     </select>Length
     <br>
-    <input type="checkbox" id="uppercase"> <label for="uppercase">Uppercase</label>
+    <input type="checkbox" id="uppercase" name="uppercase"> <label for="uppercase">Uppercase</label>
     <br>
-    <input type="checkbox" id="numbers"> <label for="numbers">Numbers</label>
+    <input type="checkbox" id="numbers" name="numbers"> <label for="numbers">Numbers</label>
     <br>
-    <input type="checkbox" id="special"> <label for="special">Special Character</label>
+    <input type="checkbox" id="special" name="special"> <label for="special">Special Character</label>
     <br>
     <input type="submit" value="Generate Password" class="btn btn-primary">
 </form>
